lab3/y.output
语法

    0 $accept: Program $end

    1 Program: %empty
    2        | FuncDecl Program

    3 FuncDecl: FuncRet FuncSign FuncBlock

    4 FuncSign: FuncName '(' Args ')'

    5 FuncBlock: '{' VarDecls Stmts '}'

    6 FuncRet: RetType

    7 RetType: T_Int
    8        | T_Void

    9 FuncName: ID

   10 Args: %empty
   11     | _Args

   12 _Args: Arg
   13      | Arg ',' _Args

   14 Arg: Specifier ID

   15 VarDecls: %empty
   16         | VarDecl ';' VarDecls

   17 VarDecl: Specifier DecList

   18 Specifier: T_Int

   19 DecList: ID
   20        | ID ',' DecList

   21 ID: T_Identifier

   22 Stmts: Stmt
   23      | Stmt Stmts

   24 Stmt: AssignStmt
   25     | PrintStmt
   26     | CallStmt
   27     | ReturnStmt
   28     | IfStmt
   29     | WhileStmt
   30     | BreakStmt
   31     | ContinueStmt

   32 AssignStmt: T_Identifier_NonT '=' Exp ';'

   33 T_Identifier_NonT: T_Identifier

   34 PrintStmt: T_Print '(' String PActuals ')' ';'

   35 String: T_StringConstant

   36 PActuals: %empty
   37         | ExpList

   38 ExpList: ',' Exp
   39        | ',' Exp ExpList

   40 ReturnStmt: Ret Exp ';'
   41           | Ret ';'

   42 Ret: T_Return

   43 CallStmt: CallExpr ';'

   44 CallExpr: ID '(' Actuals ')'
   45         | ID '(' ')'

   46 Actuals: Exp
   47        | Exp ',' Actuals

   48 IfStmt: IfTest Then StmtsBlock EndThen EndIf
   49       | IfTest Then StmtsBlock EndThen Else StmtsBlock EndIf

   50 IfTest: If TestExpr

   51 TestExpr: '(' Exp ')'

   52 StmtsBlock: '{' Stmts '}'

   53 If: T_If

   54 Then: %empty

   55 EndThen: %empty

   56 Else: T_Else

   57 EndIf: %empty

   58 WhileStmt: WhileTest Do StmtsBlock EndWhile

   59 WhileTest: While TestExpr

   60 While: T_While

   61 Do: %empty

   62 EndWhile: %empty

   63 BreakStmt: T_Break ';'

   64 ContinueStmt: T_Continue ';'

   65 Exp: Exp '+' Exp
   66    | Exp '-' Exp
   67    | Exp '*' Exp
   68    | Exp '/' Exp
   69    | '-' Exp
   70    | T_IntConstant
   71    | T_Identifier
   72    | '(' Exp ')'
   73    | CallExpr
   74    | Exp '%' Exp
   75    | Exp '>' Exp
   76    | Exp '<' Exp
   77    | Exp T_Ge Exp
   78    | Exp T_Le Exp
   79    | Exp T_Eq Exp
   80    | Exp T_Ne Exp
   81    | Exp T_Or Exp
   82    | Exp T_And Exp
   83    | '!' Exp
   84    | ReadInt

   85 ReadInt: ReadInt_NotT '(' String ')'

   86 ReadInt_NotT: T_ReadInt


Terminals, with rules where they appear

$end (0) 0
'!' (33) 83
'%' (37) 74
'(' (40) 4 34 44 45 51 72 85
')' (41) 4 34 44 45 51 72 85
'*' (42) 67
'+' (43) 65
',' (44) 13 20 38 39 47
'-' (45) 66 69
'/' (47) 68
';' (59) 16 32 34 40 41 43 63 64
'<' (60) 76
'=' (61) 32
'>' (62) 75
'{' (123) 5 52
'}' (125) 5 52
error (256)
T_IntConstant (258) 70
T_Identifier (259) 21 33 71
T_Int (260) 7 18
T_StringConstant (261) 35
T_Print (262) 34
T_ReadInt (263) 86
T_Return (264) 42
T_Void (265) 8
T_While (266) 60
T_If (267) 53
T_Else (268) 56
T_Break (269) 63
T_Continue (270) 64
T_Le (271) 78
T_Ge (272) 77
T_Eq (273) 79
T_Ne (274) 80
T_And (275) 82
T_Or (276) 81


Nonterminals, with rules where they appear

$accept (37)
    左： 0
Program (38)
    左： 1 2, 右： 0 2
FuncDecl (39)
    左： 3, 右： 2
FuncSign (40)
    左： 4, 右： 3
FuncBlock (41)
    左： 5, 右： 3
FuncRet (42)
    左： 6, 右： 3
RetType (43)
    左： 7 8, 右： 6
FuncName (44)
    左： 9, 右： 4
Args (45)
    左： 10 11, 右： 4
_Args (46)
    左： 12 13, 右： 11 13
Arg (47)
    左： 14, 右： 12 13
VarDecls (48)
    左： 15 16, 右： 5 16
VarDecl (49)
    左： 17, 右： 16
Specifier (50)
    左： 18, 右： 14 17
DecList (51)
    左： 19 20, 右： 17 20
ID (52)
    左： 21, 右： 9 14 19 20 44 45
Stmts (53)
    左： 22 23, 右： 5 23 52
Stmt (54)
    左： 24 25 26 27 28 29 30 31, 右： 22 23
AssignStmt (55)
    左： 32, 右： 24
T_Identifier_NonT (56)
    左： 33, 右： 32
PrintStmt (57)
    左： 34, 右： 25
String (58)
    左： 35, 右： 34 85
PActuals (59)
    左： 36 37, 右： 34
ExpList (60)
    左： 38 39, 右： 37 39
ReturnStmt (61)
    左： 40 41, 右： 27
Ret (62)
    左： 42, 右： 40 41
CallStmt (63)
    左： 43, 右： 26
CallExpr (64)
    左： 44 45, 右： 43 73
Actuals (65)
    左： 46 47, 右： 44 47
IfStmt (66)
    左： 48 49, 右： 28
IfTest (67)
    左： 50, 右： 48 49
TestExpr (68)
    左： 51, 右： 50 59
StmtsBlock (69)
    左： 52, 右： 48 49 58
If (70)
    左： 53, 右： 50
Then (71)
    左： 54, 右： 48 49
EndThen (72)
    左： 55, 右： 48 49
Else (73)
    左： 56, 右： 49
EndIf (74)
    左： 57, 右： 48 49
WhileStmt (75)
    左： 58, 右： 29
WhileTest (76)
    左： 59, 右： 58
While (77)
    左： 60, 右： 59
Do (78)
    左： 61, 右： 58
EndWhile (79)
    左： 62, 右： 58
BreakStmt (80)
    左： 63, 右： 30
ContinueStmt (81)
    左： 64, 右： 31
Exp (82)
    左： 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
    84, 右： 32 38 39 40 46 47 51 65 66 67 68 69 72 74 75 76 77 78
    79 80 81 82 83
ReadInt (83)
    左： 85, 右： 84
ReadInt_NotT (84)
    左： 86, 右： 85


State 0

    0 $accept: . Program $end

    T_Int   shift, and go to state 1
    T_Void  shift, and go to state 2

    $default  reduce using rule 1 (Program)

    Program   转到状态 3
    FuncDecl  转到状态 4
    FuncRet   转到状态 5
    RetType   转到状态 6


State 1

    7 RetType: T_Int .

    $default  reduce using rule 7 (RetType)


State 2

    8 RetType: T_Void .

    $default  reduce using rule 8 (RetType)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 7


State 4

    2 Program: FuncDecl . Program

    T_Int   shift, and go to state 1
    T_Void  shift, and go to state 2

    $default  reduce using rule 1 (Program)

    Program   转到状态 8
    FuncDecl  转到状态 4
    FuncRet   转到状态 5
    RetType   转到状态 6


State 5

    3 FuncDecl: FuncRet . FuncSign FuncBlock

    T_Identifier  shift, and go to state 9

    FuncSign  转到状态 10
    FuncName  转到状态 11
    ID        转到状态 12


State 6

    6 FuncRet: RetType .

    $default  reduce using rule 6 (FuncRet)


State 7

    0 $accept: Program $end .

    $default  接受


State 8

    2 Program: FuncDecl Program .

    $default  reduce using rule 2 (Program)


State 9

   21 ID: T_Identifier .

    $default  reduce using rule 21 (ID)


State 10

    3 FuncDecl: FuncRet FuncSign . FuncBlock

    '{'  shift, and go to state 13

    FuncBlock  转到状态 14


State 11

    4 FuncSign: FuncName . '(' Args ')'

    '('  shift, and go to state 15


State 12

    9 FuncName: ID .

    $default  reduce using rule 9 (FuncName)


State 13

    5 FuncBlock: '{' . VarDecls Stmts '}'

    T_Int  shift, and go to state 16

    $default  reduce using rule 15 (VarDecls)

    VarDecls   转到状态 17
    VarDecl    转到状态 18
    Specifier  转到状态 19


State 14

    3 FuncDecl: FuncRet FuncSign FuncBlock .

    $default  reduce using rule 3 (FuncDecl)


State 15

    4 FuncSign: FuncName '(' . Args ')'

    T_Int  shift, and go to state 16

    $default  reduce using rule 10 (Args)

    Args       转到状态 20
    _Args      转到状态 21
    Arg        转到状态 22
    Specifier  转到状态 23


State 16

   18 Specifier: T_Int .

    $default  reduce using rule 18 (Specifier)


State 17

    5 FuncBlock: '{' VarDecls . Stmts '}'

    T_Identifier  shift, and go to state 24
    T_Print       shift, and go to state 25
    T_Return      shift, and go to state 26
    T_While       shift, and go to state 27
    T_If          shift, and go to state 28
    T_Break       shift, and go to state 29
    T_Continue    shift, and go to state 30

    ID                 转到状态 31
    Stmts              转到状态 32
    Stmt               转到状态 33
    AssignStmt         转到状态 34
    T_Identifier_NonT  转到状态 35
    PrintStmt          转到状态 36
    ReturnStmt         转到状态 37
    Ret                转到状态 38
    CallStmt           转到状态 39
    CallExpr           转到状态 40
    IfStmt             转到状态 41
    IfTest             转到状态 42
    If                 转到状态 43
    WhileStmt          转到状态 44
    WhileTest          转到状态 45
    While              转到状态 46
    BreakStmt          转到状态 47
    ContinueStmt       转到状态 48


State 18

   16 VarDecls: VarDecl . ';' VarDecls

    ';'  shift, and go to state 49


State 19

   17 VarDecl: Specifier . DecList

    T_Identifier  shift, and go to state 9

    DecList  转到状态 50
    ID       转到状态 51


State 20

    4 FuncSign: FuncName '(' Args . ')'

    ')'  shift, and go to state 52


State 21

   11 Args: _Args .

    $default  reduce using rule 11 (Args)


State 22

   12 _Args: Arg .
   13      | Arg . ',' _Args

    ','  shift, and go to state 53

    $default  reduce using rule 12 (_Args)


State 23

   14 Arg: Specifier . ID

    T_Identifier  shift, and go to state 9

    ID  转到状态 54


State 24

   21 ID: T_Identifier .
   33 T_Identifier_NonT: T_Identifier .

    '='       reduce using rule 33 (T_Identifier_NonT)
    $default  reduce using rule 21 (ID)


State 25

   34 PrintStmt: T_Print . '(' String PActuals ')' ';'

    '('  shift, and go to state 55


State 26

   42 Ret: T_Return .

    $default  reduce using rule 42 (Ret)


State 27

   60 While: T_While .

    $default  reduce using rule 60 (While)


State 28

   53 If: T_If .

    $default  reduce using rule 53 (If)


State 29

   63 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 56


State 30

   64 ContinueStmt: T_Continue . ';'

    ';'  shift, and go to state 57


State 31

   44 CallExpr: ID . '(' Actuals ')'
   45         | ID . '(' ')'

    '('  shift, and go to state 58


State 32

    5 FuncBlock: '{' VarDecls Stmts . '}'

    '}'  shift, and go to state 59


State 33

   22 Stmts: Stmt .
   23      | Stmt . Stmts

    T_Identifier  shift, and go to state 24
    T_Print       shift, and go to state 25
    T_Return      shift, and go to state 26
    T_While       shift, and go to state 27
    T_If          shift, and go to state 28
    T_Break       shift, and go to state 29
    T_Continue    shift, and go to state 30

    $default  reduce using rule 22 (Stmts)

    ID                 转到状态 31
    Stmts              转到状态 60
    Stmt               转到状态 33
    AssignStmt         转到状态 34
    T_Identifier_NonT  转到状态 35
    PrintStmt          转到状态 36
    ReturnStmt         转到状态 37
    Ret                转到状态 38
    CallStmt           转到状态 39
    CallExpr           转到状态 40
    IfStmt             转到状态 41
    IfTest             转到状态 42
    If                 转到状态 43
    WhileStmt          转到状态 44
    WhileTest          转到状态 45
    While              转到状态 46
    BreakStmt          转到状态 47
    ContinueStmt       转到状态 48


State 34

   24 Stmt: AssignStmt .

    $default  reduce using rule 24 (Stmt)


State 35

   32 AssignStmt: T_Identifier_NonT . '=' Exp ';'

    '='  shift, and go to state 61


State 36

   25 Stmt: PrintStmt .

    $default  reduce using rule 25 (Stmt)


State 37

   27 Stmt: ReturnStmt .

    $default  reduce using rule 27 (Stmt)


State 38

   40 ReturnStmt: Ret . Exp ';'
   41           | Ret . ';'

    T_IntConstant  shift, and go to state 62
    T_Identifier   shift, and go to state 63
    T_ReadInt      shift, and go to state 64
    '-'            shift, and go to state 65
    '!'            shift, and go to state 66
    '('            shift, and go to state 67
    ';'            shift, and go to state 68

    ID            转到状态 31
    CallExpr      转到状态 69
    Exp           转到状态 70
    ReadInt       转到状态 71
    ReadInt_NotT  转到状态 72


State 39

   26 Stmt: CallStmt .

    $default  reduce using rule 26 (Stmt)


State 40

   43 CallStmt: CallExpr . ';'

    ';'  shift, and go to state 73


State 41

   28 Stmt: IfStmt .

    $default  reduce using rule 28 (Stmt)


State 42

   48 IfStmt: IfTest . Then StmtsBlock EndThen EndIf
   49       | IfTest . Then StmtsBlock EndThen Else StmtsBlock EndIf

    $default  reduce using rule 54 (Then)

    Then  转到状态 74


State 43

   50 IfTest: If . TestExpr

    '('  shift, and go to state 75

    TestExpr  转到状态 76


State 44

   29 Stmt: WhileStmt .

    $default  reduce using rule 29 (Stmt)


State 45

   58 WhileStmt: WhileTest . Do StmtsBlock EndWhile

    $default  reduce using rule 61 (Do)

    Do  转到状态 77


State 46

   59 WhileTest: While . TestExpr

    '('  shift, and go to state 75

    TestExpr  转到状态 78


State 47

   30 Stmt: BreakStmt .

    $default  reduce using rule 30 (Stmt)


State 48

   31 Stmt: ContinueStmt .

    $default  reduce using rule 31 (Stmt)


State 49

   16 VarDecls: VarDecl ';' . VarDecls

    T_Int  shift, and go to state 16

    $default  reduce using rule 15 (VarDecls)

    VarDecls   转到状态 79
    VarDecl    转到状态 18
    Specifier  转到状态 19


State 50

   17 VarDecl: Specifier DecList .

    $default  reduce using rule 17 (VarDecl)


State 51

   19 DecList: ID .
   20        | ID . ',' DecList

    ','  shift, and go to state 80

    $default  reduce using rule 19 (DecList)


State 52

    4 FuncSign: FuncName '(' Args ')' .

    $default  reduce using rule 4 (FuncSign)


State 53

   13 _Args: Arg ',' . _Args

    T_Int  shift, and go to state 16

    _Args      转到状态 81
    Arg        转到状态 22
    Specifier  转到状态 23


State 54

   14 Arg: Specifier ID .

    $default  reduce using rule 14 (Arg)


State 55

   34 PrintStmt: T_Print '(' . String PActuals ')' ';'

    T_StringConstant  shift, and go to state 82

    String  转到状态 83


State 56

   63 BreakStmt: T_Break ';' .

    $default  reduce using rule 63 (BreakStmt)


State 57

   64 ContinueStmt: T_Continue ';' .

    $default  reduce using rule 64 (ContinueStmt)


State 58

   44 CallExpr: ID '(' . Actuals ')'
   45         | ID '(' . ')'

    T_IntConstant  shift, and go to state 62
    T_Identifier   shift, and go to state 63
    T_ReadInt      shift, and go to state 64
    '-'            shift, and go to state 65
    '!'            shift, and go to state 66
    '('            shift, and go to state 67
    ')'            shift, and go to state 84

    ID            转到状态 31
    CallExpr      转到状态 69
    Actuals       转到状态 85
    Exp           转到状态 86
    ReadInt       转到状态 71
    ReadInt_NotT  转到状态 72


State 59

    5 FuncBlock: '{' VarDecls Stmts '}' .

    $default  reduce using rule 5 (FuncBlock)


State 60

   23 Stmts: Stmt Stmts .

    $default  reduce using rule 23 (Stmts)


State 61

   32 AssignStmt: T_Identifier_NonT '=' . Exp ';'

    T_IntConstant  shift, and go to state 62
    T_Identifier   shift, and go to state 63
    T_ReadInt      shift, and go to state 64
    '-'            shift, and go to state 65
    '!'            shift, and go to state 66
    '('            shift, and go to state 67

    ID            转到状态 31
    CallExpr      转到状态 69
    Exp           转到状态 87
    ReadInt       转到状态 71
    ReadInt_NotT  转到状态 72


State 62

   70 Exp: T_IntConstant .

    $default  reduce using rule 70 (Exp)


State 63

   21 ID: T_Identifier .
   71 Exp: T_Identifier .

    '('       reduce using rule 21 (ID)
    $default  reduce using rule 71 (Exp)


State 64

   86 ReadInt_NotT: T_ReadInt .

    $default  reduce using rule 86 (ReadInt_NotT)


State 65

   69 Exp: '-' . Exp

    T_IntConstant  shift, and go to state 62
    T_Identifier   shift, and go to state 63
    T_ReadInt      shift, and go to state 64
    '-'            shift, and go to state 65
    '!'            shift, and go to state 66
    '('            shift, and go to state 67

    ID            转到状态 31
    CallExpr      转到状态 69
    Exp           转到状态 88
    ReadInt       转到状态 71
    ReadInt_NotT  转到状态 72


State 66

   83 Exp: '!' . Exp

    T_IntConstant  shift, and go to state 62
    T_Identifier   shift, and go to state 63
    T_ReadInt      shift, and go to state 64
    '-'            shift, and go to state 65
    '!'            shift, and go to state 66
    '('            shift, and go to state 67

    ID            转到状态 31
    CallExpr      转到状态 69
    Exp           转到状态 89
    ReadInt       转到状态 71
    ReadInt_NotT  转到状态 72


State 67

   72 Exp: '(' . Exp ')'

    T_IntConstant  shift, and go to state 62
    T_Identifier   shift, and go to state 63
    T_ReadInt      shift, and go to state 64
    '-'            shift, and go to state 65
    '!'            shift, and go to state 66
    '('            shift, and go to state 67

    ID            转到状态 31
    CallExpr      转到状态 69
    Exp           转到状态 90
    ReadInt       转到状态 71
    ReadInt_NotT  转到状态 72


State 68

   41 ReturnStmt: Ret ';' .

    $default  reduce using rule 41 (ReturnStmt)


State 69

   73 Exp: CallExpr .

    $default  reduce using rule 73 (Exp)


State 70

   40 ReturnStmt: Ret Exp . ';'
   65 Exp: Exp . '+' Exp
   66    | Exp . '-' Exp
   67    | Exp . '*' Exp
   68    | Exp . '/' Exp
   74    | Exp . '%' Exp
   75    | Exp . '>' Exp
   76    | Exp . '<' Exp
   77    | Exp . T_Ge Exp
   78    | Exp . T_Le Exp
   79    | Exp . T_Eq Exp
   80    | Exp . T_Ne Exp
   81    | Exp . T_Or Exp
   82    | Exp . T_And Exp

    T_Le   shift, and go to state 91
    T_Ge   shift, and go to state 92
    T_Eq   shift, and go to state 93
    T_Ne   shift, and go to state 94
    T_And  shift, and go to state 95
    T_Or   shift, and go to state 96
    '<'    shift, and go to state 97
    '>'    shift, and go to state 98
    '+'    shift, and go to state 99
    '-'    shift, and go to state 100
    '*'    shift, and go to state 101
    '/'    shift, and go to state 102
    '%'    shift, and go to state 103
    ';'    shift, and go to state 104


State 71

   84 Exp: ReadInt .

    $default  reduce using rule 84 (Exp)


State 72

   85 ReadInt: ReadInt_NotT . '(' String ')'

    '('  shift, and go to state 105


State 73

   43 CallStmt: CallExpr ';' .

    $default  reduce using rule 43 (CallStmt)


State 74

   48 IfStmt: IfTest Then . StmtsBlock EndThen EndIf
   49       | IfTest Then . StmtsBlock EndThen Else StmtsBlock EndIf

    '{'  shift, and go to state 106

    StmtsBlock  转到状态 107


State 75

   51 TestExpr: '(' . Exp ')'

    T_IntConstant  shift, and go to state 62
    T_Identifier   shift, and go to state 63
    T_ReadInt      shift, and go to state 64
    '-'            shift, and go to state 65
    '!'            shift, and go to state 66
    '('            shift, and go to state 67

    ID            转到状态 31
    CallExpr      转到状态 69
    Exp           转到状态 108
    ReadInt       转到状态 71
    ReadInt_NotT  转到状态 72


State 76

   50 IfTest: If TestExpr .

    $default  reduce using rule 50 (IfTest)


State 77

   58 WhileStmt: WhileTest Do . StmtsBlock EndWhile

    '{'  shift, and go to state 106

    StmtsBlock  转到状态 109


State 78

   59 WhileTest: While TestExpr .

    $default  reduce using rule 59 (WhileTest)


State 79

   16 VarDecls: VarDecl ';' VarDecls .

    $default  reduce using rule 16 (VarDecls)


State 80

   20 DecList: ID ',' . DecList

    T_Identifier  shift, and go to state 9

    DecList  转到状态 110
    ID       转到状态 51


State 81

   13 _Args: Arg ',' _Args .

    $default  reduce using rule 13 (_Args)


State 82

   35 String: T_StringConstant .

    $default  reduce using rule 35 (String)


State 83

   34 PrintStmt: T_Print '(' String . PActuals ')' ';'

    ','  shift, and go to state 111

    $default  reduce using rule 36 (PActuals)

    PActuals  转到状态 112
    ExpList   转到状态 113


State 84

   45 CallExpr: ID '(' ')' .

    $default  reduce using rule 45 (CallExpr)


State 85

   44 CallExpr: ID '(' Actuals . ')'

    ')'  shift, and go to state 114


State 86

   46 Actuals: Exp .
   47        | Exp . ',' Actuals
   65 Exp: Exp . '+' Exp
   66    | Exp . '-' Exp
   67    | Exp . '*' Exp
   68    | Exp . '/' Exp
   74    | Exp . '%' Exp
   75    | Exp . '>' Exp
   76    | Exp . '<' Exp
   77    | Exp . T_Ge Exp
   78    | Exp . T_Le Exp
   79    | Exp . T_Eq Exp
   80    | Exp . T_Ne Exp
   81    | Exp . T_Or Exp
   82    | Exp . T_And Exp

    T_Le   shift, and go to state 91
    T_Ge   shift, and go to state 92
    T_Eq   shift, and go to state 93
    T_Ne   shift, and go to state 94
    T_And  shift, and go to state 95
    T_Or   shift, and go to state 96
    '<'    shift, and go to state 97
    '>'    shift, and go to state 98
    '+'    shift, and go to state 99
    '-'    shift, and go to state 100
    '*'    shift, and go to state 101
    '/'    shift, and go to state 102
    '%'    shift, and go to state 103
    ','    shift, and go to state 115

    $default  reduce using rule 46 (Actuals)


State 87

   32 AssignStmt: T_Identifier_NonT '=' Exp . ';'
   65 Exp: Exp . '+' Exp
   66    | Exp . '-' Exp
   67    | Exp . '*' Exp
   68    | Exp . '/' Exp
   74    | Exp . '%' Exp
   75    | Exp . '>' Exp
   76    | Exp . '<' Exp
   77    | Exp . T_Ge Exp
   78    | Exp . T_Le Exp
   79    | Exp . T_Eq Exp
   80    | Exp . T_Ne Exp
   81    | Exp . T_Or Exp
   82    | Exp . T_And Exp
